fix: update font color for dark mode

--- a/src/css/ifm-variables.scss
+++ b/src/css/ifm-variables.scss
@@ -50,7 +50,7 @@
     0px 4px 6px -1px rgba(7, 10, 27, 0.05), inset 0px 0px 0px 1px #323649;
   --ifm-menu-color-background-active: var(--bt-menu-color-background-active);
   --ifm-menu-color-background-hover: var(--bt-menu-color-background-hover);
-  --ifm-font-color-base: #8086a0;
+  --ifm-font-color-base: #99a0bf;
   --ifm-heading-color: #ebedff;
   --ifm-background-color: #070a1b !important;
   --ifm-background-surface-color: var(--bt-sidebar-background-color);
